trần huyền diệp

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700');
-@import url('https://fonts.googleapis.com/css?family=Metal+Mania');
+@import url('https://fonts.googleapis.com/css?family=Metal+Mania:vn');
 @font-face {
    font-family: 'BOOTERFF';
     src: url('../fonts/booter-zero-zero/BOOTERFF.ttf') format('woff');
